testsuite/bsc.interra/messages/EBadStringLit/EBadStringLit2.bs.bsc-out.expected
checking package dependencies
Error: "EBadStringLit2.bs", line 20, column 37: (P0001)
  Bad String literal
